user list page and create user page changed to material design.

--- a/src/TemplateCoreMaterial/Views/Home/Index.cshtml
+++ b/src/TemplateCoreMaterial/Views/Home/Index.cshtml
@@ -34,3 +34,4 @@
   <div class="mdl-cell mdl-cell--4-col mdl-cell--6-col-tablet">4 (6 tablet)</div>
   <div class="mdl-cell mdl-cell--2-col mdl-cell--4-col-phone">2 (4 phone)</div>
 </div>
+</div>
