--- a/src/TemplateCoreMaterial/Views/User/Create.cshtml
+++ b/src/TemplateCoreMaterial/Views/User/Create.cshtml
@@ -8,51 +8,54 @@
   ViewData["Title"] = Localizer["Create new user"];
 }
 
-<h2>@Localizer["Create new user"]</h2>
+<style>
+  .text-danger {
+    color: crimson;
+  }
+</style>
+@*<h2>@Localizer["Create new user"]</h2>*@
+@*<hr />*@
 
-<form asp-action="Create">
-  <div class="form-horizontal">
-    <hr />
-    @*where the error messages will be displayed*@
-    <div asp-validation-summary="All" class="text-danger"></div>
+<div class="mdl-grid">
+  <form asp-action="Create">
+    <div class="mdl-cell--12-col">
+      @*where the error messages will be displayed*@
+      <div asp-validation-summary="All" class="text-danger"></div>
 
-    <div class="form-group">
-      @*name field*@
-      <label class="col-md-2 control-label">@Localizer["Name"]</label>
-      @*<label asp-for="Name" class="col-md-2 control-label"></label>*@
-      <div class="col-md-10">
-        <input asp-for="Name" class="form-control" />
-        <span asp-validation-for="Name" class="text-danger" />
+      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+        @*name field*@
+        <label class="mdl-textfield__label" for="name">@Localizer["Name"]</label>
+        <div>
+          <input asp-for="Name" class="mdl-textfield__input" type="text" id="name" />
+          <span asp-validation-for="Name" class="text-danger" />
+        </div>
       </div>
-    </div>
-    <div class="form-group">
-      @*name username*@
-      <label class="col-md-2 control-label">@Localizer["Username"]</label>
-      @*<label asp-for="UserName" class="col-md-2 control-label"></label>*@
-      <div class="col-md-10">
-        <input asp-for="UserName" class="form-control" />
-        <span asp-validation-for="UserName" class="text-danger" />
+      <div>
+        @*name username*@
+        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+          <label class="mdl-textfield__label" for="username">@Localizer["Username"]</label>
+          <input asp-for="UserName" class="mdl-textfield__input" type="text" id="username" />
+          <span asp-validation-for="UserName" class="text-danger" />
+        </div>
       </div>
-    </div>
-    <div class="form-group">
-      @*name email*@
-      <label class="col-md-2 control-label">@Localizer["Email"]</label>
-      @*<label asp-for="Email" class="col-md-2 control-label"></label>*@
-      <div class="col-md-10">
-        <input asp-for="Email" class="form-control" />
-        <span asp-validation-for="Email" class="text-danger" />
+      <div>
+        @*name email*@
+        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+          <label class="mdl-textfield__label" for="email">@Localizer["Email"]</label>
+          <input asp-for="Email" class="mdl-textfield__input" type="email" id="email" />
+          <span asp-validation-for="Email" class="text-danger" />
+        </div>
       </div>
-    </div>
-      <table class="table">
+      <table class="mdl-data-table mdl-js-data-table">
         <thead>
           <tr>
-            <th>
+            <th class="mdl-data-table__cell--non-numeric">
               @Localizer["Check"]
             </th>
-            <th>
+            <th class="mdl-data-table__cell--non-numeric">
               @Localizer["Name"]
             </th>
-            <th></th>
+            <th class="mdl-data-table__cell--non-numeric"></th>
           </tr>
         </thead>
         <tbody>
@@ -60,13 +63,14 @@
         </tbody>
       </table>
 
-    <div class="form-group">
-      <div class="col-md-offset-2 col-md-10">
-        <input type="submit" value=@Localizer["Create"] class="btn btn-default" />
+      <div>
+        <div class="col-md-offset-2 col-md-10">
+          <input type="submit" value=@Localizer["Create"] class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" />
+        </div>
       </div>
     </div>
-  </div>
-</form>
+  </form>
+</div>
 
 @section Scripts {
   @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
