playing with material design lite.

--- a/src/TemplateCoreMaterial/Views/Home/Index.cshtml
+++ b/src/TemplateCoreMaterial/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
   ViewData["Title"] = Localizer["Home Page"];
 }
 
-<div class="mdl-grid">
+@*<div class="mdl-grid">
   <div class="mdl-cell mdl-cell--1-col">1</div>
   <div class="mdl-cell mdl-cell--1-col">1</div>
   <div class="mdl-cell mdl-cell--1-col">1</div>
@@ -18,20 +18,69 @@
   <div class="mdl-cell mdl-cell--1-col">1</div>
   <div class="mdl-cell mdl-cell--1-col">1</div>
   <div class="mdl-cell mdl-cell--1-col">1</div>
-</div>
-<div class="mdl-grid">
+</div>*@
+@*<div class="mdl-grid">
   <div class="mdl-cell mdl-cell--4-col">4</div>
   <div class="mdl-cell mdl-cell--4-col">4</div>
   <div class="mdl-cell mdl-cell--4-col">4</div>
-</div>
-<div class="mdl-grid">
+</div>*@
+@*<div class="mdl-grid">
   <div class="mdl-cell mdl-cell--6-col">6</div>
   <div class="mdl-cell mdl-cell--4-col">4</div>
   <div class="mdl-cell mdl-cell--2-col">2</div>
-</div>
-<div class="mdl-grid">
+</div>*@
+@*<div class="mdl-grid">
   <div class="mdl-cell mdl-cell--6-col mdl-cell--8-col-tablet">6 (8 tablet)</div>
   <div class="mdl-cell mdl-cell--4-col mdl-cell--6-col-tablet">4 (6 tablet)</div>
   <div class="mdl-cell mdl-cell--2-col mdl-cell--4-col-phone">2 (4 phone)</div>
-</div>
+</div>*@
+<div class="mdl-grid">
+  <div class="mdl-cell mdl-cell--4-col">
+    <div class="mdl-card mdl-shadow--4dp">
+      <div class="mdl-card__media">
+        <img src="" width="173" height="157" border="0"
+             alt="" style="padding:10px;">
+      </div>
+      <div class="mdl-card__supporting-text">
+        Auckland Sky Tower, taken March 24th, 2014
+      </div>
+      <div class="mdl-card__supporting-text">
+        The Sky Tower is an observation and telecommunications tower located in Auckland,
+        New Zealand. It is 328 metres (1,076 ft) tall, making it the tallest man-made structure
+        in the Southern Hemisphere.
+      </div>
+    </div>
+  </div>
+  <div class="mdl-cell mdl-cell--4-col">
+    <div class="mdl-card mdl-shadow--4dp">
+      <div class="mdl-card__media">
+        <img src="" width="173" height="157" border="0"
+             alt="" style="padding:10px;">
+      </div>
+      <div class="mdl-card__supporting-text">
+        Auckland Sky Tower, taken March 24th, 2014
+      </div>
+      <div class="mdl-card__supporting-text">
+        The Sky Tower is an observation and telecommunications tower located in Auckland,
+        New Zealand. It is 328 metres (1,076 ft) tall, making it the tallest man-made structure
+        in the Southern Hemisphere.
+      </div>
+    </div>
+  </div>
+  <div class="mdl-cell mdl-cell--4-col">
+    <div class="mdl-card mdl-shadow--4dp">
+      <div class="mdl-card__media">
+        <img src="" width="173" height="157" border="0"
+             alt="" style="padding:10px;">
+      </div>
+      <div class="mdl-card__supporting-text">
+        Auckland Sky Tower, taken March 24th, 2014
+      </div>
+      <div class="mdl-card__supporting-text">
+        The Sky Tower is an observation and telecommunications tower located in Auckland,
+        New Zealand. It is 328 metres (1,076 ft) tall, making it the tallest man-made structure
+        in the Southern Hemisphere.
+      </div>
+    </div>
+  </div>
 </div>
