--- a/src/TemplateCoreMaterial/Views/Account/Login.cshtml
+++ b/src/TemplateCoreMaterial/Views/Account/Login.cshtml
@@ -11,22 +11,22 @@
   Layout = "_LayoutWithoutNavigation";
 }
 
-@*<h2>@ViewData["Title"].</h2>*@
+@*<h4>@ViewData["Title"].</h4>*@
 
 <!-- Wide card with share menu button -->
 <style>
-  .demo-card-wide.mdl-card 
+  .demo-card-wide.mdl-card
   {
     width: 650px;
   }
 
-  .demo-card-wide > .mdl-card__title 
+  .demo-card-wide > .mdl-card__title
   {
     color: #000000;
     height: 60px;
   }
 
-  .demo-card-wide > .mdl-card__menu 
+  .demo-card-wide > .mdl-card__menu
   {
     color: #fff;
   }
@@ -35,51 +35,98 @@
   {
     color: crimson;
   }
+
+  /*.mdl-layout
+  {
+    align-items: center;
+    justify-content: center;
+  }*/
+
+  /*.mdl-grid-center
+  {
+    align-items: center;
+    justify-content: center;
+  }*/
+  /*.mdl-layout__content
+  {
+    padding: 24px;
+    flex: none;
+  }*/
 </style>
 
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
 
-<div class="mdl-grid">
+
+@*<div class="mdl-grid">
   <div class="mdl-layout-spacer"></div>
-  <div class="mdl-cell mdl-cell--4-col">
-    <div asp-validation-summary="All" class="text-danger"></div>
-    <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
-      <div>
-        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label mdl-textfield--full-width">
-          <label class="mdl-textfield__label" for="UserName">@Localizer["Username"]</label>
-          <input asp-for="UserName" type="text" id="UserName" class="mdl-textfield__input"/>
-          <span asp-validation-for="UserName" class="text-danger"></span>
+
+  <div class="mdl-shadow--6dp">
+
+      <div class="demo-card-wide mdl-shadow--6dp">
+        <div class="mdl-card__title mdl-color--primary mdl-color-text--white">
+          <h2 class="mdl-card__title-text"></h2>
+        </div>
+        <div class="mdl-card__supporting-text">
+          <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
+            <div>
+              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <label class="mdl-textfield__label" for="UserName">@Localizer["Username"]</label>
+                <input asp-for="UserName" type="text" id="UserName" class="mdl-textfield__input" />
+                <span asp-validation-for="UserName" class="text-danger"></span>
+              </div>
+            </div>
+            <br />
+            <div>
+              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <label class="mdl-textfield__label" for="Password">@Localizer["Password"]</label>
+                <input asp-for="Password" type="password" id="Password" class="mdl-textfield__input" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+              </div>
+            </div>
+            <br />
+            <div class="mdl-textfield--align-right">
+              <button type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+                @Localizer["Log in"]
+              </button>
+            </div>
+          </form>
         </div>
       </div>
-      <br />
-      <div>
-        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label mdl-textfield--full-width">
-          <label class="mdl-textfield__label" for="Password" >@Localizer["Password"]</label>
-          <input asp-for="Password" type="password" id="Password" class="mdl-textfield__input"/>
-          <span asp-validation-for="Password" class="text-danger"></span>
-        </div>
-      </div>
-      <br />
-      <div class="mdl-textfield--align-right">
-        <button type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-          @Localizer["Log in"]
-        </button>
-      </div>
-    </form>
+
   </div>
   <div class="mdl-layout-spacer"></div>
-</div>
+</div>*@
+
+
+<div class="mdl-grid">
+    <div class="mdl-layout-spacer"></div>
+    <div class="mdl-cell mdl-cell--4-col">
+      <div asp-validation-summary="All" class="text-danger"></div>
+      <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
+        <div>
+          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label mdl-textfield--full-width">
+            <label class="mdl-textfield__label" for="UserName">@Localizer["Username"]</label>
+            <input asp-for="UserName" type="text" id="UserName" class="mdl-textfield__input" />
+            <span asp-validation-for="UserName" class="text-danger"></span>
+          </div>
+        </div>
+        <br />
+        <div>
+          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label mdl-textfield--full-width">
+            <label class="mdl-textfield__label" for="Password">@Localizer["Password"]</label>
+            <input asp-for="Password" type="password" id="Password" class="mdl-textfield__input" />
+            <span asp-validation-for="Password" class="text-danger"></span>
+          </div>
+        </div>
+        <br />
+        <div class="mdl-textfield--align-right">
+          <button type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+            @Localizer["Log in"]
+          </button>
+        </div>
+      </form>
+    </div>
+    <div class="mdl-layout-spacer"></div>
+  </div>
 
 
 @section Scripts {
