--- a/src/TemplateCoreMaterial/Views/Shared/_LayoutWithoutNavigation.cshtml
+++ b/src/TemplateCoreMaterial/Views/Shared/_LayoutWithoutNavigation.cshtml
@@ -30,7 +30,7 @@
   </environment>
 </head>
 <body>
-  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+  <div class="mdl-layout mdl-js-layout">
     <main class="mdl-layout__content">
       <div class="page-content">
 
